raw/regex.0.1.30--2016-11-09-12-29-18--1.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./regex.0.1.30
cargo rustc -- -Ztime-passes -Zinput-stats
   Compiling regex v0.1.30 (file:///root/benchmarks/regex.0.1.30)
time: 0.042; rss: 54MB	parsing
Lines of code:             8558
Pre-expansion node count:  58080
time: 0.000; rss: 54MB	recursion limit
time: 0.000; rss: 54MB	crate injection
time: 0.000; rss: 54MB	plugin loading
time: 0.000; rss: 54MB	plugin registration
time: 0.029; rss: 78MB	expansion
time: 0.000; rss: 78MB	maybe building test harness
time: 0.001; rss: 78MB	maybe creating a macro crate
Post-expansion node count: 68134
time: 0.000; rss: 78MB	checking for inline asm in case the target doesn't support it
time: 0.001; rss: 78MB	complete gated feature checking
time: 0.003; rss: 78MB	early lint checks
time: 0.000; rss: 78MB	AST validation
time: 0.005; rss: 79MB	name resolution
time: 0.005; rss: 85MB	lowering ast -> hir
time: 0.001; rss: 87MB	indexing hir
time: 0.001; rss: 87MB	attribute checking
time: 0.001; rss: 79MB	language item collection
time: 0.001; rss: 79MB	lifetime resolution
time: 0.000; rss: 79MB	looking for entry point
time: 0.000; rss: 79MB	looking for plugin registrar
time: 0.006; rss: 82MB	region resolution
time: 0.000; rss: 82MB	loop checking
time: 0.001; rss: 82MB	static item recursion checking
time: 0.018; rss: 83MB	compute_incremental_hashes_map
time: 0.000; rss: 83MB	load_dep_graph
time: 0.006; rss: 84MB	type collecting
time: 0.000; rss: 84MB	variance inference
time: 0.017; rss: 86MB	coherence checking
time: 0.007; rss: 86MB	wf checking
time: 0.167; rss: 100MB	item-types checking
time: 0.127; rss: 102MB	item-bodies checking
time: 0.000; rss: 102MB	drop-impl checking
time: 0.025; rss: 104MB	const checking
time: 0.002; rss: 104MB	privacy checking
time: 0.000; rss: 104MB	stability index
time: 0.001; rss: 104MB	intrinsic checking
time: 0.001; rss: 104MB	effect checking
time: 0.002; rss: 104MB	match checking
time: 0.002; rss: 104MB	liveness checking
time: 0.007; rss: 104MB	rvalue checking
time: 0.042; rss: 118MB	MIR dump
  time: 0.003; rss: 118MB	SimplifyCfg
  time: 0.005; rss: 118MB	QualifyAndPromoteConstants
  time: 0.009; rss: 118MB	TypeckMir
  time: 0.000; rss: 118MB	SimplifyBranches
  time: 0.001; rss: 118MB	SimplifyCfg
time: 0.018; rss: 118MB	MIR cleanup and validation
time: 0.020; rss: 118MB	borrow checking
time: 0.000; rss: 118MB	reachability checking
time: 0.002; rss: 118MB	death checking
time: 0.002; rss: 118MB	stability checking
time: 0.000; rss: 118MB	unused lib feature checking
time: 0.023; rss: 118MB	lint checking
time: 0.000; rss: 118MB	resolving dependency formats
  time: 0.000; rss: 118MB	NoLandingPads
  time: 0.001; rss: 118MB	SimplifyCfg
  time: 0.004; rss: 118MB	EraseRegions
  time: 0.000; rss: 118MB	AddCallGuards
  time: 0.008; rss: 120MB	ElaborateDrops
  time: 0.000; rss: 120MB	NoLandingPads
  time: 0.002; rss: 120MB	SimplifyCfg
  time: 0.002; rss: 120MB	InstCombine
  time: 0.000; rss: 120MB	Deaggregator
  time: 0.000; rss: 120MB	CopyPropagation
  time: 0.002; rss: 120MB	SimplifyLocals
  time: 0.000; rss: 120MB	AddCallGuards
  time: 0.000; rss: 120MB	PreTrans
time: 0.020; rss: 120MB	MIR optimisations
  time: 0.019; rss: 124MB	write metadata
  time: 0.050; rss: 126MB	translation item collection
  time: 0.006; rss: 126MB	codegen unit partitioning
  time: 0.006; rss: 156MB	internalize symbols
time: 0.437; rss: 156MB	translation
time: 0.000; rss: 156MB	assert dep graph
time: 0.000; rss: 156MB	serialize dep graph
  time: 0.038; rss: 109MB	llvm function passes [0]
  time: 0.019; rss: 110MB	llvm module passes [0]
  time: 0.707; rss: 113MB	codegen passes [0]
  time: 0.000; rss: 113MB	codegen passes [0]
time: 0.822; rss: 113MB	LLVM passes
time: 0.000; rss: 113MB	serialize work products
time: 0.035; rss: 84MB	linking
done
